--- a/qos_identifiers.adoc
+++ b/qos_identifiers.adoc
@@ -123,5 +123,5 @@ allocation and monitoring for each `AT`.
 | 6-7  | Custom   | Designated for custom use.
 |===
 
-If a request is received with an unsupported `AT` value then the resource
-controller behaves as if the `AT` value was 0.
+If the `AT` value in a request is unsupported then the resource controller
+behaves as if the `AT` value was 0.
