--- a/qos_bandwidth.adoc
+++ b/qos_bandwidth.adoc
@@ -23,8 +23,8 @@ register interface.
 
 The reset value is 0 for the following registers fields.
 
-* `bc_mon_ctl` - `BUSY` field
-* `bc_alloc_ctl` - `BUSY` field
+* `bc_mon_ctl.BUSY` field
+* `bc_alloc_ctl.BUSY` field
 
 The reset value is `UNSPECIFIED` for all other registers and/or fields.
 
@@ -245,7 +245,7 @@ establish an accurate counter value for the monitored event.
 The counter provides the number of bytes transferred by requests matching the
 `EVT_ID` as they go past the monitoring point. A bandwidth value may be
 determined by reading the byte count value at two instances of time `T1` and
-`T2`, see <<eq-2>>. If the value of the counter at time `T1` was `B1`, and at
+`T2` (see <<eq-2>>). If the value of the counter at time `T1` was `B1`, and at
 time `T2` is `B2`, then the bandwidth can be calculated as follows. The
 frequency of the time source is represented by latexmath:[T_{freq}].
 
@@ -399,7 +399,7 @@ requests matching `AT`, even when all other `RCID` are using their full
 allocation of bandwidth.
 
 If there is non-reserved or unused bandwidth available in an accounting
-interval, `RCID`s may compete for additional bandwidth. The non-reserved or
+interval, `RCIDs` may compete for additional bandwidth. The non-reserved or
 unused bandwidth is proportionately shared among the competing RCIDs using the
 configured `Mweight` parameter, which is a number between 0 and 255. A larger
 weight implies a greater fraction of the bandwidth. A weight of 0 implies that
@@ -415,8 +415,8 @@ access-types, but the behavior is otherwise well defined.
 When the `Mweight` parameter is not set to 0, the amount of unused bandwidth
 allocated to `RCID=x` during contention with another `RCID` that is also
 permitted to use unused bandwidth is determined by dividing the `Mweight` of
-`RCID=x` by the sum of the `Mweight` of all other contending `RCID`s. This
-ratio `P` is determined as in <<eq-3>>.
+`RCID=x` by the sum of the `Mweight` of all other contending `RCIDs`. This
+ratio `P` is determined by <<eq-3>>.
 
 [latexmath#eq-3,reftext="equation ({counter:eqs})"]
 ++++
