--- a/qos_intro.adoc
+++ b/qos_intro.adoc
@@ -89,9 +89,21 @@ address of the range is aligned to 4-KiB. The memory-mapped registers may be
 accessed using naturally aligned 4-byte or 8-byte memory accesses. The
 controller behavior for register accesses where the address is not aligned to
 the size of the access, or if the access spans multiple registers, of if the
-size of the access is not 4-bytes or 8-bytes, is `UNSPECIFIED`. The atomicity of
-access to an 8-byte register is `UNSPECIFIED`. A 4-byte access to a register
-must be single-copy atomic.
+size of the access is not 4-bytes or 8-bytes, is `UNSPECIFIED`. A 4-byte access
+to a register must be single-copy atomic. Whether an 8 byte access to an CBQRI
+register is single-copy atomic is `UNSPECIFIED`, and such an access may appear,
+internally to the CBQRI implementation, as if two separate 4 byte accesses were
+performed.
+
+[NOTE]
+====
+The CBQRI registers are defined in such a way that software can perform two
+individual 4 byte accesses, or hardware can perform two independent 4 byte
+transactions resulting from an 8 byte access, to the high and low halves of the
+register as long as the register semantics, with regards to side-effects, are
+respected between the two software accesses, or two hardware transactions,
+respectively.
+====
 
 The controller registers have little-endian byte order (even for systems where
 all harts are big-endian-only).
