--- a/readme.adoc
+++ b/readme.adoc
@@ -41,7 +41,7 @@ To build the document, you'll need the following tools installed on your system:
 This project uses submodules to include the RISC-V documentation toolchain. 
 
 ```
-  git clone --recurse-submodule https://github.com/riscv/riscv-svadu.git
+  git clone --recurse-submodule https://github.com/riscv-non-isa/riscv-cbqri.git
   cd ./riscv-zacas.git
   make VERSION=v1.0.0 REVMARK=Draft
 ```
