--- a/qos.bib
+++ b/qos.bib
@@ -5,7 +5,7 @@
 }
 @electronic{IOMMU,
   title = {RISC-V IOMMU Architecture Specification},
-  url = {https://github.com/riscv/riscv-iommu}
+  url = {https://github.com/riscv-non-isa/riscv-iommu}
 }
 @INPROCEEDINGS{SSAMPLE,
   author={Thornock, N.C. and Flanagan, J.K.},
