--- a/qos_intro.adoc
+++ b/qos_intro.adoc
@@ -3,7 +3,7 @@
 
 Quality of Service (QoS) is defined as the minimal end-to-end performance that
 is guaranteed in advance by a service level agreement (SLA) to a workload. A
-workload may be a single application, a group of application, a virtual machine,
+workload may be a single application, a group of applications, a virtual machine,
 a group of virtual machines, or a combination of those. The performance may
 be measured in the form of metrics such as instructions per cycle (IPC), latency
 of servicing work, etc.
