--- a/qos_iommu.adoc
+++ b/qos_iommu.adoc
@@ -32,7 +32,7 @@ If the reset value for `ddtp.iommu_mode` field is `Bare`, then the
 
 [NOTE]
 ====
-At reset, it is suggested that the `RCID` field of `iommu_qosid` be set to 0 if
+At reset, it is required that the `RCID` field of `iommu_qosid` be set to 0 if
 the IOMMU is in `Bare` mode, as typically the resource controllers in the
 SoC default to a reset behavior of associating all capacity or bandwidth to the
 `RCID` value of 0.
