add clarification on note

--- a/qos_hw_guidelines.adoc
+++ b/qos_hw_guidelines.adoc
@@ -1,6 +1,7 @@
 [[QOS_HW_GUIDE]]
 == Hardware Guidelines
 
+[[QOS_SIZING]]
 === Sizing QoS Identifiers
 
 In a typical implementation the number of `RCID` bits implemented (e.g., to
@@ -20,9 +21,12 @@ large pool of `MCID` speeds up this analysis.
 
 [NOTE]
 ====
-To support maximal flexibility in allocation of QoS IDs to workloads it is
-recommended for all resource controllers in the system to support an identical
-number of `RCID` and `MCID`.
+To achieve maximum flexibility in the allocation of QoS IDs to workloads, it is
+recommended that all resource controllers in the system support an identical
+number of `RCID` and `MCID`. Requests typically need to be processed by multiple
+controllers, such as caches, fabrics, and memory controllers. In such cases, if
+not all controllers accessed by a request support an identical number of IDs,
+software will be constrained, using only the IDs supported by all controllers.
 ====
 
 
