--- a/qos.bib
+++ b/qos.bib
@@ -7,6 +7,10 @@
   title = {RISC-V IOMMU Architecture Specification},
   url = {https://github.com/riscv-non-isa/riscv-iommu}
 }
+@electronic{SSQOSID,
+  title = {RISC-V Quality-of-Service (QoS) Identifiers},
+  url = {https://github.com/riscv/riscv-ssqosid}
+}
 @INPROCEEDINGS{SSAMPLE,
   author={Thornock, N.C. and Flanagan, J.K.},
   booktitle={2000 Winter Simulation Conference Proceedings (Cat. No.00CH37165)},
