--- a/readme.adoc
+++ b/readme.adoc
@@ -31,9 +31,9 @@ For instructions on how to contribute please see the link:CONTRIBUTING.md[CONTRI
 To build the document, you'll need the following tools installed on your system:
 
 ```
-  Make
-  asciiDoctor-pdf, asciidoctor-bibtex, asciidoctor-diagram and asciidoctor-mathematical
-  Docker
+  make
+  asciidoctor-pdf, asciidoctor-bibtex, asciidoctor-diagram and asciidoctor-mathematical
+  docker
 ```
 
 = Cloning and Building the Document
@@ -42,7 +42,7 @@ This project uses submodules to include the RISC-V documentation toolchain.
 
 ```
   git clone --recurse-submodule https://github.com/riscv-non-isa/riscv-cbqri.git
-  cd ./riscv-zacas.git
+  cd ./riscv-cbqri
   make VERSION=v1.0.0 REVMARK=Draft
 ```
 
