First page still mentions CMQRI instead of CBQRI

--- a/qos_header.adoc
+++ b/qos_header.adoc
@@ -37,7 +37,7 @@ endif::[]
 :xrefstyle: short
 
 = RISC-V Capacity and Bandwidth QoS Register Interface
-RISC-V CMQRI Task Group
+RISC-V CBQRI Task Group
 
 // Preamble
 [WARNING]
