add reference to Smstateen

--- a/qos.bib
+++ b/qos.bib
@@ -11,6 +11,10 @@
   title = {RISC-V Quality-of-Service (QoS) Identifiers},
   url = {https://github.com/riscv/riscv-ssqosid}
 }
+@electronic{STATEEN,
+  title = {RISC-V State Enable Extension},
+  url = {https://drive.google.com/file/d/1dhI6OzVbejQbfwyBTuwK9U4VUmW8ii4o/view}
+}
 @INPROCEEDINGS{SSAMPLE,
   author={Thornock, N.C. and Flanagan, J.K.},
   booktitle={2000 Winter Simulation Conference Proceedings (Cat. No.00CH37165)},
